# inference-api

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
inference-mono/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
inference-mono/api/alembic/versions/: 20260614_0002_billing_usage_wallets.py  20260617_0003_admin_rbac.py  20260619_0004_router_service_clients.py  20260623_0005_serving_coordination.py  20260625_0006_per_model_serving.py  20260706_0007_subnet_stake_allowance.py
inference-mono/api/app/: main.py
inference-mono/api/app/admin/: bootstrap_owner.py  dependencies.py  permissions.py  routes.py  schemas.py  service.py
inference-mono/api/app/api_keys/: __init__.py  routes.py  service.py
inference-mono/api/app/audit/: service.py
inference-mono/api/app/auth/: dependencies.py  oauth.py  routes.py  token_revocation.py
inference-mono/api/app/billing/: __init__.py  plans.py  routes.py  schemas.py  service.py  stripe.py
inference-mono/api/app/blockchain/: __init__.py  erc20.py  ethereum.py  substrate_evm.py
inference-mono/api/app/core/: config.py  errors.py  rate_limit.py  redis.py  security.py
inference-mono/api/app/db/: session.py
inference-mono/api/app/email/: __init__.py  providers.py  service.py
inference-mono/api/app/service_clients/: __init__.py  dependencies.py  schemas.py  (+1 more)
inference-mono/api/tests/: conftest.py  test_admin.py  test_api_keys.py  test_migrations.py  test_phone_auth.py  test_router_service.py
inference-mono/inference_api/: .env.example  Dockerfile  README.md  pyproject.toml
inference-mono/inference_api/e2e/: create_schema.py  run_e2e.py  run_e2e_multimodel.py
inference-mono/inference_api/inference_api/: __init__.py  allowlist_routes.py  allowlist_seed.py  allowlist_service.py  api_keys.py  billing_plans.py  chain.py  config.py  crypto.py  db.py  errors.py  ht_indexer.py  logging.py  main.py  mesh.py  models.py  pricing.py  product_routes.py  redis.py  router_routes.py  router_service.py  schemas.py  security.py  service_clients.py  usage.py
inference-mono/inference_api/tests/: _tee.py  conftest.py  test_allowlist_routes.py  test_cross_repo_registration.py  test_miner_registration.py  test_models_endpoint.py  test_product_routes.py  test_provisioner.py  test_provisioner_policy.py  test_router_routes.py  test_routing_forward.py  test_subnet_stake_quota.py
(+146 files in other folders)
