[project]
name = "inference-api"
version = "0.1.0"
description = "API-only FastAPI backend for an OpenAI-style developer platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "fastapi-users[sqlalchemy,oauth]>=14.0.0,<15.0.0",
    "SQLAlchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "redis>=5.0.0",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.3.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "pwdlib[argon2,bcrypt]>=0.2.0",
    "PyJWT[crypto]>=2.10.1",
    "phonenumbers>=8.13.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2.0",
    "aiosmtplib>=3.0.0",
    "boto3>=1.34.0",
    "stripe>=10.0.0",
    "web3>=7.0.0",
    "eth-account>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]
